--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
           >
         </div>
 
-        <!-- Logo centrado -->
-        <div class="flex items-center justify-center mx-auto">
+        <!-- Logo centrado y nombre en móvil -->
+        <div class="flex flex-col items-center justify-center mx-auto">
           <img src="img/logo.png" alt="Logo" class="h-10 w-auto" />
+          <span class="ml-2 text-[#627eff] text-lg font-semibold md:hidden"
+            >Psicología & Bienestar</span
+          >
         </div>
 
         <!-- Botón de menú (solo en móvil) -->
@@ -360,7 +363,7 @@
         >
           <div>
             <img
-              src="assets/team/sindy_team.png"
+              src="assets/sindy_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 1"
             />
@@ -372,7 +375,7 @@
           </div>
           <div>
             <img
-              src="assets/team/felipe_team.png"
+              src="assets/felipe_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 2"
             />
@@ -383,7 +386,7 @@
           </div>
           <div>
             <img
-              src="assets/team/viviana_team.png"
+              src="assets/viviana_team.png"
               class="mx-auto rounded-full mb-4 w-40 h-40 object-cover"
               alt="Miembro 3"
             />
@@ -401,7 +404,7 @@
         <div class="max-w-6xl mx-auto px-4">
           <div class="text-center mb-10">
             <a
-              href="pages/galeria.html"
+              href="/pages/galeria.html"
               class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out"
             >
               Galería de nuestros servicios
@@ -554,7 +557,6 @@
           class="w-16 h-16 bg-white p-2 rounded-full shadow-lg border-4 border-[#627eff]"
         />
       </div>
-
       <div class="max-w-6xl mx-auto px-4">
         <div
           class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 text-center md:text-left pt-8"
@@ -575,7 +577,6 @@
             </p>
           </div>
         </div>
-
         <div class="text-center mt-6 pt-4 border-t border-white/20">
           <p class="text-xs">
             Desarrollado por
@@ -589,11 +590,38 @@
             </a>
           </p>
         </div>
+        <!-- Redes sociales en el footer para móviles -->
+        <div class="flex justify-center space-x-6 mt-4 md:hidden">
+          <a
+            href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1"
+            target="_blank"
+            aria-label="Instagram"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg"
+              alt="Instagram"
+              class="w-7 h-7 filter invert"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/share/1A9WZs7XCb/"
+            target="_blank"
+            aria-label="Facebook"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg"
+              alt="Facebook"
+              class="w-7 h-7 filter invert"
+            />
+          </a>
+        </div>
       </div>
     </footer>
 
     <!-- Redes sociales laterales -->
-    <div class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2">
+    <div
+      class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2 redes-laterales"
+    >
       <!-- Instagram -->
       <a
         href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1"
@@ -646,7 +674,7 @@
       class="fixed bottom-6 right-6 z-50 group"
     >
       <div
-        class="relative flex items-center justify-center bg-[#25D366] hover:bg-green-600 w-14 h-14 rounded-full shadow-lg transition-colors duration-300"
+        class="relative flex items-center justify-center bg-[#25D366] hover:bg-green-600 w-14 h-14 rounded-full shadow-lg transition-colors duration-300 whatsapp-float-anim"
       >
         <img
           src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/whatsapp.svg"
@@ -660,6 +688,28 @@
         </span>
       </div>
     </a>
+
+    <!-- Botón "Ir arriba" flotante solo en móvil -->
+    <button
+      onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+      class="fixed bottom-24 right-6 z-50 bg-[#627eff] text-white rounded-full shadow-lg p-3 md:hidden flex items-center justify-center transition hover:bg-[#53c6e4]"
+      aria-label="Ir arriba"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M5 15l7-7 7 7"
+        />
+      </svg>
+    </button>
 
     <!-- Scripts -->
     <script defer src="js/scripts.js"></script>
