--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -21,21 +21,10 @@
       rel="stylesheet"
       href="https://unpkg.com/@splidejs/splide@4.1.3/dist/css/splide.min.css"
     />
+    <link rel="stylesheet" href="../css/styles.css" />
     <style>
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background-image: url("../assets/img_em/background-empresarial.jpeg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center center;
-        /* Cambiado a center center */
-        color: #333;
-      }
-
       .bg-white {
         background-color: rgba(255, 255, 255, 0.8);
-        /* Blanco con 80% de opacidad */
       }
 
       .perspective {
@@ -59,10 +48,6 @@
         /* oculta scroll en caso de desborde */
       }
 
-      html {
-        scroll-behavior: smooth;
-      }
-
       @font-face {
         font-family: "Sego Serif";
         src: url("fonts/sego-serif.ttf") format("truetype");
@@ -78,27 +63,150 @@
       .gallery-item {
         position: relative;
         width: 100%;
-        padding-bottom: 75%;
-        /* Esto crea una proporción de 4:3 (altura es 75% del ancho) */
-        /* Alternativa moderna para el padding-bottom (soporte limitado en navegadores antiguos): */
-        /* aspect-ratio: 4 / 3; */
-        /* O 1 / 1 para cuadrado, 16 / 9 para widescreen */
+        aspect-ratio: 1/1;
         box-sizing: border-box;
-        /* Asegura que el padding se incluya en el tamaño */
+        border-radius: 1rem;
+        border: 2.5px solid #627eff;
+        background: transparent;
+        background-clip: padding-box;
+        box-shadow:
+          0 2px 12px 0 rgba(98,127,255,0.10),
+          0 1.5px 6px 0 rgba(0,0,0,0.08),
+          inset 0 1px 8px 0 rgba(98,127,255,0.08);
+        transition: box-shadow 0.3s, transform 0.3s, border-color 0.3s, background 0.3s;
+        overflow: hidden;
+      }
+
+      .gallery-item:hover {
+        box-shadow:
+          0 4px 24px 0 rgba(98,127,255,0.18),
+          0 3px 12px 0 rgba(0,0,0,0.12),
+          inset 0 2px 16px 0 rgba(98,127,255,0.12);
+        border-color: #53c6e4;
+        background: rgba(255,255,255,0.75);
+        transform: translateY(-4px) scale(1.03);
+        z-index: 2;
       }
 
       .gallery-item img {
         position: absolute;
-        /* Permite que la imagen ocupe todo el espacio del padding-bottom */
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        /* Recorta la imagen para que cubra el área sin distorsionar */
+        border-radius: 1rem;
+        transition: filter 0.3s;
+        filter: brightness(0.98) contrast(1.05);
+        background: transparent;
+        display: block;
       }
+
+      .gallery-item img:hover {
+        filter: brightness(1.05) contrast(1.1);
+      }
+
+      #galeria-imagenes {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        gap: 1rem;
+        overflow: visible;
+        max-height: none;
+      }
+
+      @media (max-width: 640px) {
+        #galeria-imagenes {
+          grid-template-columns: repeat(2, 1fr);
+        }
+
+        .gallery-item {
+          aspect-ratio: 1/1;
+        }
+
+        .redes-laterales {
+          display: none !important;
+        }
+      }
+
+      /* Lightbox mejoras: permite scroll táctil en móvil */
+      #lightbox {
+        transition: opacity 0.3s;
+        opacity: 0;
+        pointer-events: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: auto;
+      }
+
+      #lightbox:not(.hidden) {
+        opacity: 1;
+        pointer-events: auto;
+        display: flex;
+      }
+
+      #lightbox img {
+        border-radius: 1rem;
+        box-shadow: 0 4px 24px 0 rgba(98,127,255,0.18), 0 3px 12px 0 rgba(0,0,0,0.12);
+        max-width: 90vw;
+        max-height: 80vh;
+        margin: auto;
+        display: block;
+      }
+
+      /* Lightbox botones mejorados */
+      .lightbox-btn {
+        position: absolute;
+        background: rgba(40, 40, 60, 0.45);
+        border: none;
+        border-radius: 50%;
+        box-shadow: 0 2px 12px rgba(98,127,255,0.18), 0 1.5px 6px rgba(0,0,0,0.12);
+        color: #fff;
+        width: 56px;
+        height: 56px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2.5rem;
+        cursor: pointer;
+        transition: background 0.25s, transform 0.2s, box-shadow 0.2s;
+        z-index: 10;
+        opacity: 0.92;
+      }
+      .lightbox-btn:hover {
+        background: rgba(98,127,255,0.85);
+        transform: scale(1.12);
+        box-shadow: 0 4px 24px rgba(98,127,255,0.28), 0 3px 12px rgba(0,0,0,0.18);
+        opacity: 1;
+      }
+      .lightbox-btn:active {
+        transform: scale(0.98);
+      }
+      #lightbox-prev { left: 2vw; }
+      #lightbox-next { right: 2vw; }
+      #lightbox-close {
+        top: 2vw;
+        right: 2vw;
+        font-size: 2rem;
+        width: 48px;
+        height: 48px;
+      }
+      @media (max-width: 640px) {
+        .lightbox-btn {
+          width: 44px;
+          height: 44px;
+          font-size: 1.7rem;
+        }
+        #lightbox-close {
+          top: 12px;
+          right: 12px;
+          width: 40px;
+          height: 40px;
+          font-size: 1.3rem;
+        }
+      }
+
     </style>
-    <link rel="stylesheet" href="../css/styleEm.css" />
     <script>
       tailwind.config = {
         theme: {
@@ -112,6 +220,13 @@
         },
       };
     </script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body class="bg-white text-gray-800">
@@ -128,8 +243,12 @@
           >
         </div>
 
-        <div class="flex items-center justify-center mx-auto">
+        <!-- Logo centrado y nombre en móvil -->
+        <div class="flex flex-col items-center justify-center mx-auto">
           <img src="../img/logo.png" alt="Logo" class="h-10 w-auto" />
+          <span class="mt-2 text-[#627eff] text-lg font-semibold md:hidden">
+            Psicología & Bienestar
+          </span>
         </div>
 
         <button
@@ -181,7 +300,6 @@
             class="text-[#627eff] hover:text-[#53c6e4]"
             >Contacto</a
           >
-          <a href="#" class="text-[#627eff] hover:text-[#53c6e4]">Galería</a>
         </nav>
       </div>
 
@@ -211,7 +329,7 @@
           >Equipo</a
         >
         <a
-          href="../pages/galeria.html"
+          href="#"
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Galería</a
@@ -221,12 +339,6 @@
           @click="closeMenu()"
           class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
           >Contacto</a
-        >
-        <a
-          href="#"
-          @click="closeMenu()"
-          class="block py-2 text-[#627eff] hover:text-[#53c6e4]"
-          >Galería</a
         >
       </div>
     </header>
@@ -258,21 +370,34 @@
 
         <button
           id="lightbox-prev"
-          class="absolute left-4 text-white text-5xl p-2 bg-gray-700 bg-opacity-50 rounded-full hover:bg-opacity-75 hidden md:block select-none focus:outline-none user-select-none"
+          class="lightbox-btn hidden md:flex items-center justify-center"
+          aria-label="Foto anterior"
         >
-          &lt;
+          <svg width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="16" cy="16" r="15" stroke="rgba(255,255,255,0.18)" />
+            <polyline points="18 10 12 16 18 22" />
+          </svg>
         </button>
         <button
           id="lightbox-next"
-          class="absolute right-4 text-white text-5xl p-2 bg-gray-700 bg-opacity-50 rounded-full hover:bg-opacity-75 hidden md:block select-none focus:outline-none user-select-none"
+          class="lightbox-btn hidden md:flex items-center justify-center"
+          aria-label="Foto siguiente"
         >
-          &gt;
+          <svg width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="16" cy="16" r="15" stroke="rgba(255,255,255,0.18)" />
+            <polyline points="14 10 20 16 14 22" />
+          </svg>
         </button>
         <button
           id="lightbox-close"
-          class="absolute top-4 right-4 text-white text-4xl p-2 bg-gray-700 bg-opacity-50 rounded-full hover:bg-opacity-75 select-none focus:outline-none user-select-none"
+          class="lightbox-btn flex items-center justify-center"
+          aria-label="Cerrar"
         >
-          &times;
+          <svg width="28" height="28" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="14" cy="14" r="13" stroke="rgba(255,255,255,0.18)" />
+            <line x1="9" y1="9" x2="19" y2="19" />
+            <line x1="19" y1="9" x2="9" y2="19" />
+          </svg>
         </button>
       </div>
     </main>
@@ -284,7 +409,6 @@
           class="w-16 h-16 bg-white p-2 rounded-full shadow-lg border-4 border-[#627eff]"
         />
       </div>
-
       <div class="max-w-6xl mx-auto px-4">
         <div
           class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 text-center md:text-left pt-8"
@@ -305,7 +429,6 @@
             </p>
           </div>
         </div>
-
         <div class="text-center mt-6 pt-4 border-t border-white/20">
           <p class="text-xs">
             Desarrollado por
@@ -319,10 +442,38 @@
             </a>
           </p>
         </div>
+        <!-- Redes sociales en el footer para móviles -->
+        <div class="flex justify-center space-x-6 mt-4 md:hidden">
+          <a
+            href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1"
+            target="_blank"
+            aria-label="Instagram"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg"
+              alt="Instagram"
+              class="w-7 h-7 filter invert animate-icon-float"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/share/1A9WZs7XCb/"
+            target="_blank"
+            aria-label="Facebook"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg"
+              alt="Facebook"
+              class="w-7 h-7 filter invert animate-icon-float"
+            />
+          </a>
+        </div>
       </div>
     </footer>
 
-    <div class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2">
+    <!-- Redes sociales laterales (solo escritorio) -->
+    <div
+      class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2 redes-laterales"
+    >
       <a
         href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1"
         target="_blank"
@@ -334,7 +485,7 @@
           <img
             src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg"
             alt="Instagram"
-            class="w-5 h-5 filter invert"
+            class="w-5 h-5 filter invert animate-icon-float"
           />
         </div>
         <span
@@ -355,7 +506,7 @@
           <img
             src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg"
             alt="Facebook"
-            class="w-5 h-5 filter invert"
+            class="w-5 h-5 filter invert animate-icon-float"
           />
         </div>
         <span
@@ -365,14 +516,14 @@
         </span>
       </a>
     </div>
-
+    <!-- Botón WhatsApp flotante -->
     <a
       href="https://wa.me/573164603881"
       target="_blank"
       class="fixed bottom-6 right-6 z-50 group"
     >
       <div
-        class="relative flex items-center justify-center bg-[#25D366] hover:bg-green-600 w-14 h-14 rounded-full shadow-lg transition-colors duration-300"
+        class="relative flex items-center justify-center bg-[#25D366] hover:bg-green-600 w-14 h-14 rounded-full shadow-lg transition-colors duration-300 whatsapp-float-anim"
       >
         <img
           src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/whatsapp.svg"
@@ -386,9 +537,30 @@
         </span>
       </div>
     </a>
+    <!-- Botón "Ir arriba" flotante solo en móvil -->
+    <button
+      onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+      class="fixed bottom-24 right-6 z-50 bg-[#627eff] text-white rounded-full shadow-lg p-3 md:hidden flex items-center justify-center transition hover:bg-[#53c6e4]"
+      aria-label="Ir arriba"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M5 15l7-7 7 7"
+        />
+      </svg>
+    </button>
 
     <script defer src="../js/scripts.js"></script>
-
     <script src="../js/galeria.js"></script>
   </body>
+</html>
 </html>
